--- a/MVCReviewSiteProject/Views/Home/Index.cshtml
+++ b/MVCReviewSiteProject/Views/Home/Index.cshtml
@@ -3,9 +3,9 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Dana's Tech Review Site</h1>
+    <p class="lead">Collecting reviews for the most current products from users for the users!</p>
+    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Explore Reviews &raquo;</a></p>
 </div>
 
 <div class="row">
